[gd_scene load_steps=9 format=3 uid="uid://cu30gjjhspgly"]

[ext_resource type="Theme" uid="uid://cgihxoevv7qgc" path="res://ui/01_atoms/theme.tres" id="1"]
[ext_resource type="Script" uid="uid://cmeg1pbyisx8s" path="res://ui/04_templates/settings_menu/settings_menu.gd" id="2"]
[ext_resource type="Script" uid="uid://ca0jcapmd4bqx" path="res://ui/04_templates/settings_menu/listen_for_input_popup.gd" id="3"]
[ext_resource type="FontFile" uid="uid://c8fvau54sblb1" path="res://ui/01_atoms/assets/fonts/By Wuchta/Letterstyle(1).otf" id="4_vtv80"]
[ext_resource type="PackedScene" uid="uid://h7fnf0wq8gja" path="res://ui/03_organisms/audio_video_settings_submenu/audio_video_settings_submenu.tscn" id="4_wfqad"]
[ext_resource type="StyleBox" uid="uid://c7y2d4gnnbp5m" path="res://ui/01_atoms/panel/panel_crimson_solid.tres" id="5_i7mb3"]
[ext_resource type="PackedScene" uid="uid://t0tclns0vf5s" path="res://ui/03_organisms/interface_settings_submenu/interface_settings_submenu.tscn" id="5_islbd"]
[ext_resource type="PackedScene" uid="uid://c0hwnrs6ki8nk" path="res://ui/03_organisms/controls_settings_submenu/controls_settings_submenu.tscn" id="6_wfqad"]

[node name="SettingsMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1")
script = ExtResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Categories" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Categories"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_vtv80")
theme_override_font_sizes/font_size = 15
text = "Categories"

[node name="Control" type="Control" parent="HBoxContainer/Categories"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="AudioVideo" type="Button" parent="HBoxContainer/Categories"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Controls")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Interface")
mouse_filter = 2
toggle_mode = true
text = "Audio & Video"

[node name="Interface" type="Button" parent="HBoxContainer/Categories"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../AudioVideo")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Controls")
mouse_filter = 2
toggle_mode = true
text = "Interface"

[node name="Controls" type="Button" parent="HBoxContainer/Categories"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Interface")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../AudioVideo")
mouse_filter = 2
toggle_mode = true
text = "Controls"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AudioVideo" parent="HBoxContainer/Content" instance=ExtResource("4_wfqad")]
layout_mode = 2

[node name="Interface" parent="HBoxContainer/Content" instance=ExtResource("5_islbd")]
visible = false
layout_mode = 2

[node name="Controls" parent="HBoxContainer/Content" instance=ExtResource("6_wfqad")]
visible = false
layout_mode = 2

[node name="Popups" type="Node" parent="."]

[node name="BlockClicksPopup" type="PopupPanel" parent="Popups"]
auto_translate_mode = 1
size = Vector2i(1280, 760)
exclusive = true
always_on_top = true
theme = ExtResource("1")

[node name="ListenForInputPopup" type="PopupPanel" parent="Popups"]
size = Vector2i(265, 100)
exclusive = true
always_on_top = true
theme = ExtResource("1")
theme_override_styles/panel = ExtResource("5_i7mb3")
script = ExtResource("3")

[node name="PressKeyLabel" type="Label" parent="Popups/ListenForInputPopup"]
offset_left = 16.0
offset_top = 16.0
offset_right = 257.0
offset_bottom = 84.0
size_flags_horizontal = 13
size_flags_vertical = 12
text = "Press key for \"Up\"..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="done" from="HBoxContainer/Content/AudioVideo" to="." method="_on_content_done"]
[connection signal="done" from="HBoxContainer/Content/Interface" to="." method="_on_content_done"]
[connection signal="done" from="HBoxContainer/Content/Controls" to="." method="_on_content_done"]
[connection signal="input_request" from="HBoxContainer/Content/Controls" to="." method="_on_controls_input_request"]
[connection signal="about_to_popup" from="Popups/BlockClicksPopup" to="Popups/BlockClicksPopup" method="on_about_to_popup"]
[connection signal="about_to_popup" from="Popups/ListenForInputPopup" to="Popups/ListenForInputPopup" method="on_about_to_popup"]
[connection signal="focus_exited" from="Popups/ListenForInputPopup" to="Popups/ListenForInputPopup" method="_on_focus_exited"]
[connection signal="key_pressed" from="Popups/ListenForInputPopup" to="HBoxContainer/Content/Controls" method="_on_listen_for_input_popup_key_pressed"]
